# hungry-shrimp

./: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  railway.json  railway.toml  server-express.ts  server-standalone.ts  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
app/api/leaderboard/: route.ts
app/api/lobby/: route.ts
app/api/matches/[matchId]/: route.ts
app/api/matches/[matchId]/result/: route.ts
app/api/rooms/: route.ts
app/api/rooms/join/: route.ts
app/api/skill/: route.ts
app/bots/: page.tsx
app/leaderboard/: page.tsx
app/login/: page.tsx
app/matches/[matchId]/: page.tsx
app/matches/[matchId]/result/: page.tsx
app/matches/[matchId]/watch/: page.tsx
app/rules/: page.tsx
app/skill.md/: page.tsx  route.ts
components/: GameCanvas.tsx  Header.tsx  RoomCard.tsx
lib/: api.ts  game-engine.ts  types.ts
public/: skill.md
python-sdk/: README.md  pyproject.toml
python-sdk/hungry_shrimp/: __init__.py  bot.py  client.py
server/: db.ts  hungryshrimp.db-shm  hungryshrimp.db-wal  index.ts  schema.sql  tsconfig.json  websocket.ts
