[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hungry-shrimp"
version = "1.0.0"
description = "Python SDK for Hungry Shrimp Multi-Agent Snake Battle Arena"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "black", "mypy"]

[project.urls]
Homepage = "https://github.com/example/hungry-shrimp"

[tool.setuptools.packages.find]
where = ["."]
include = ["hungry_shrimp*"]
